# ResumePlayer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_OPEN_SOURCE_RELEASE.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
scripts/: gen_icon.py
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: VideoPlayer.tsx
src/hooks/: useVideoProgress.ts
src/lib/: tauri.ts
src/types/: index.ts
